e2e/devenv/service.yaml
# Generated from: kubectl create service clusterip mysql --tcp=3306 --dry-run=client -o yaml > mysql-service.yaml
# Note: service.spec.selector (app:mysql) MUST match deployment.spec.template.metadata.labels (app:mysql)
# Note: By default, the allowed NodePort range is: 30000-32767; you can hardcode nodeport instead of having one randomly assigned
apiVersion: v1
kind: Service
metadata:
  namespace: devenv
  name: mysql
  labels:
    app: mysql
    environment: dev
spec:
  type: NodePort
  ports:
  - name: "3306"
    port: 3306
    protocol: TCP
    targetPort: 3306
    nodePort: 30001
  selector:
    app: mysql
status:
  loadBalancer: {}
