e2e/devenv/svc-mysql.yaml
# Generated from: kubectl create service clusterip mysql --tcp=3306 --dry-run=client -o yaml > mysql-service.yaml
# Note: service.spec.selector (app:mysql) MUST match deployment.spec.template.metadata.labels (app:mysql)
# Note: By default, the allowed NodePort range is: 30000-32767; you can hardcode nodeport instead of having one randomly assigned
# Headless service (see https://stackoverflow.com/questions/46456239/how-to-expose-a-headless-service-for-a-statefulset-externally-in-kubernetes)
apiVersion: v1
kind: Service
metadata:
  namespace: devenv
  name: mysql
  labels:
    app: mysql
spec:
  clusterIP: None
  ports:
  - name: mysql
    port: 3306
    nodePort: 30306
  selector:
    app: mysql
    environment: dev
